# nostr-connect-wasm

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
src/: app.rs  main.rs
src/components/: delegate.rs  mod.rs  navbar.rs
src/pages/: connect.rs  home.rs  mod.rs
src/services/: nostr.rs
src/views/: connect.rs  home.rs  mod.rs  settings.rs
