[package]
name = "nostr-connect-wasm"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["yew", "trunk", "nostr"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
anyhow = "1.0.70"
dashmap = "5.4.0"
futures = "0.3.28"
log = "0.4.17"
# nostr-sdk = { version = "0.21", features = ["nip46"] } 
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", features = ["nip46", "vanity"] }
# nostr-sdk = { path = "../nostr/crates/nostr-sdk", features = ["nip46"] }
qrcode = { version = "0.12.0", default-features = false, features = ["svg"] } 
serde = "1.0.159"
serde_json = "1.0.95"
thiserror = "1.0.40"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features=["Clipboard", "Navigator"] }
yew = { version = "0.20", features = ["csr"] }
tokio = { version = "1", default_features = false, features=["sync", "rt"]} 
